[package]
name = "actix-demo"
version = "0.1.0"
authors = ["Mihail <m.grib@akveo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"

futures = "0.3.1"
env_logger = "0.7"
bytes = "0.5"

rusoto_core = "0.43.0"
rusoto_ec2 = "0.43.0"
